@@ -25,7 +25,14 @@ export(plot.hanabi)
 export(plotAnnot)
 export(plotNameColor)
 export(plotSlimSmear)
+export(ranges2annot)
+export(ranges2genes)
 import(ggplot2)
+importFrom(GenomicRanges,findOverlaps)
+importFrom(GenomicRanges,promoters)
+importFrom(IRanges,extractList)
+importFrom(S4Vectors,List)
+importFrom(S4Vectors,unstrsplit)
 importFrom(VennDiagram,venn.diagram)
 importFrom(gdata,read.xls)
 importFrom(grid,grid.draw)
