@@ -168,43 +168,19 @@ ah["AH49556"]
 gff <- ah[["AH49556"]]
 head(gff)
 
-ranges2genes <- function(ranges, genes)
-  findOverlaps(ranges, genes) %>%
-    as(., "List") %>%
-    extractList(mcols(genes)$gene_name, .) %>%
-    unique %>%
-    unstrsplit(";")
-
-mcols(l1)$genes  <- ranges2genes(rowRanges(l1), gff)
-genes <- rowsum(assay(l1), mcols(l1)$genes) %>% data.frame
+rowRanges(l1)$genes  <- ranges2genes(rowRanges(l1), gff)
+genes <- rowsum(assay(l1), rowRanges(l1)$genes) %>% data.frame
+colData(l1)$genes <- colSums(genes > 0)
+colData(l1)$geneSymbols <- countSymbols(genes)
 ```
 
 ### Promoter, Exon, Intron, ...
 
 ```{r annotation}
-ranges2annot <- function(ranges, annot, showClasses=NULL) {
-  classes <- c("promoter", "exon", "intron", "unknown")
-  
-  if (! missing(showClasses) ) return(classes)
-  
-  findOverlapsBool <- function(A, B)
-    findOverlaps(A, B) %>% as(., "List") %>% any
-  
-  p <- findOverlapsBool(ranges, promoters(gff, 500, 500))
-  e <- findOverlapsBool(ranges, gff[mcols(gff)$type == "exon",])
-  t <- findOverlapsBool(ranges, gff[mcols(gff)$type == "transcript",])
-
-  sapply( 1:length(ranges), function(i) {
-         if (p[i]) {classes[1]}
-    else if (e[i]) {classes[2]}
-    else if (t[i]) {classes[3]}
-    else           {classes[4]}
-  }) %>% factor(levels = classes)
-}
-
 rowRanges(l1)$annotation <- ranges2annot(rowRanges(l1), gff)
 
-colData(l1)[ranges2annot(showClasses=T)] <- rowsum(assay(l1), mcols(l1)$annotation) %>% t %>% DataFrame
+colData(l1)[levels(rowRanges(l1)$annotation)] <-
+  rowsum(assay(l1), mcols(l1)$annotation) %>% t %>% DataFrame
 ```
 
 
